# particle-interaction-with-optix

./: LICENSE  README.md  a100.batch  rtx8000.batch
Cuda-version/: CMakeLists.txt  cudaLJ.cu  point3d.hpp
SDK/: CMakeLists.txt
SDK/optixMultiCustom/: CMakeLists.txt  optixLJ.cu  optixMultiCustom.cpp  optixMultiCustom.h  optixMultiCustomAABB.cu
SDK/optixMultiSphere/: CMakeLists.txt  optixLJ.cu  optixSphere.cpp  optixSphere.h
SDK/optixMultiSphereAABB/: CMakeLists.txt  optixLJ.cu  optixSphere.cpp  optixSphere.h  prefixsum.hpp  sort.cu  sort.cuh
SDK/optixMultiTriangle/: CMakeLists.txt  optixLJ.cu  optixTriangle.cpp  optixTriangle.cu  optixTriangle.h
